--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,11 @@ description = "A curated set of LeetCode and DSA solutions written in Python, fo
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "pytest-cov>=7.0.0",
     "pytest>=8.4.2",
 ]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+addopts = "--cov=dsa --cov=leetcode --cov-report=xml"
 python_files = ["test_*.py"]
