--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,6 @@ jobs:
         run: pytest
 
       - name: Upload coverage to Codecov
-        run: python -m codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
